trivial: fix make distcheck by disting the introspection file in the tarball

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,7 +28,7 @@ INCLUDES =						\
 	-DGCM_DATA=\"$(pkgdatadir)\"
 
 introspectiondir = $(datadir)/dbus-1/interfaces
-introspection_DATA = org.gnome.ColorManager.xml
+dist_introspection_DATA = org.gnome.ColorManager.xml
 
 noinst_LIBRARIES = libgcmshared.a
 libgcmshared_a_SOURCES =				\
