trivial: fix up the Fedora spec file

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -112,6 +112,7 @@ gtk-update-icon-cache %{_datadir}/icons/hicolor &> /dev/null || :
 %{_datadir}/polkit-1/actions/org.gnome.color.policy
 %{_datadir}/glib-2.0/schemas/org.gnome.color-manager.gschema.xml
 %{_datadir}/GConf/gsettings/org.gnome.color-manager.gschema.migrate
+%{_datadir}/dbus-1/interfaces/org.gnome.ColorManager.xml
 
 # this is probably better in a shared package
 %dir %{_localstatedir}/lib/color
