trivial: fix make distcheck

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,6 +8,7 @@ src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
 src/gcm-calibrate-dialog.c
 src/gcm-calibrate-manual.c
+src/gcm-cell-renderer-profile.c
 src/gcm-client.c
 src/gcm-colorimeter.c
 src/gcm-device-xrandr.c
