--- a/data/gcm-apply.desktop.in
+++ b/data/gcm-apply.desktop.in
@@ -4,7 +4,7 @@ _Name=Load device color profiles
 _GenericName=Load device color profiles
 _Comment=Applies device profile settings at session startup
 Icon=gnome-color-manager
-Exec=gcm-apply
+Exec=gcm-apply --login
 Terminal=false
 Type=Application
 Categories=
