Set the calibrate button insensitive if VTE is unavailable

--- a/configure.ac
+++ b/configure.ac
@@ -99,29 +99,19 @@ AM_GLIB_GNU_GETTEXT
 GLIB_GSETTINGS
 
 dnl ---------------------------------------------------------------------------
-dnl - Library dependencies
-dnl ---------------------------------------------------------------------------
-GLIB_REQUIRED=2.14.0
-GTK_REQUIRED=2.90.0
-GNOMEDESKTOP_REQUIRED=2.90.0
-VTE_REQUIRED=0.25.1
-CANBERRA_REQUIRED=0.10
-GIO_REQUIRED=2.25.8
-
-dnl ---------------------------------------------------------------------------
 dnl - Check library dependencies
 dnl ---------------------------------------------------------------------------
-PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 gthread-2.0 gio-2.0 >= $GIO_REQUIRED)
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.14.0 gobject-2.0 gthread-2.0 gio-2.0 >= 2.25.8)
 PKG_CHECK_MODULES(XORG, xxf86vm xrandr)
-PKG_CHECK_MODULES(GTK, gtk+-3.0 >= $GTK_REQUIRED)
-PKG_CHECK_MODULES(GNOMEDESKTOP, gnome-desktop-3.0 >= $GNOMEDESKTOP_REQUIRED)
+PKG_CHECK_MODULES(GTK, gtk+-3.0 >= 2.90.0)
+PKG_CHECK_MODULES(GNOMEDESKTOP, gnome-desktop-3.0 >= 2.90.0)
 PKG_CHECK_MODULES(GUDEV, gudev-1.0)
 PKG_CHECK_MODULES(LCMS, lcms)
 PKG_CHECK_MODULES(X11, x11)
 PKG_CHECK_MODULES(NOTIFY, libnotify)
 
 dnl **** Check for VTE ****
-PKG_CHECK_MODULES(VTE, vte3 >= $VTE_REQUIRED, has_vte=yes, has_vte=no)
+PKG_CHECK_MODULES(VTE, vte3 >= 0.25.1, has_vte=yes, has_vte=no)
 AM_CONDITIONAL(GCM_USE_VTE, test x$has_vte = xyes)
 if test x$has_vte = xyes; then
 	AC_DEFINE(GCM_USE_VTE,1,[Use VTE terminal widget])
@@ -159,7 +149,7 @@ if test x$enable_exiv = xyes; then
 	AC_DEFINE(GCM_USE_EXIV,1,[Use EXIV support for detecting scanners])
 fi
 
-PKG_CHECK_MODULES(CANBERRA, libcanberra-gtk3 >= $CANBERRA_REQUIRED)
+PKG_CHECK_MODULES(CANBERRA, libcanberra-gtk3 >= 0.10)
 
 PKG_CHECK_MODULES(EXIF, libexif)
 AC_CHECK_LIB(tiff, TIFFReadRGBAImageOriented,
