Split gcm-prefs into a control center module and a profile viewer

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ config.status
 config.sub
 configure
 depcomp
-gnome-color-manager-*.tar.gz
+gnome-color-manager-*.tar.*
 gtk-doc.make
 install-sh
 libtool
@@ -32,4 +32,3 @@ intltool-merge.in
 intltool-update.in
 .acb
 *.patch
-
