--- a/data/gcm-prefs.desktop.in
+++ b/data/gcm-prefs.desktop.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Color Profiles
-_GenericName=Color Profiles
+_Name=Color
+_GenericName=Color
 _Comment=Manage ICC color profiles
 Icon=gnome-color-manager
-Exec=gcm-prefs
+Exec=gnome-control-center color
 Terminal=false
 Type=Application
 Categories=Settings;X-GNOME-SystemSettings;
@@ -12,3 +12,4 @@ StartupNotify=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-color-manager
 X-GNOME-Bugzilla-Component=gnome-color-manager
+X-GNOME-Settings-Panel=color
