--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,9 +1,11 @@
 data/gcm-apply.desktop.in
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
+data/gcm-viewer.ui
 data/org.gnome.color-manager.gschema.xml
 policy/org.gnome.color.policy.in
 src/egg-debug.c
+src/cc-color-panel.c
 src/gcm-apply.c
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
@@ -21,7 +23,7 @@ src/gcm-import.c
 src/gcm-inspect.c
 src/gcm-install-system-wide.c
 src/gcm-picker.c
-src/gcm-prefs.c
+src/gcm-viewer.c
 src/gcm-profile.c
 src/gcm-session.c
 src/gcm-utils.c
