trivial: libnotify >= 0.5.0 has dropped the GTK dep

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -39,7 +39,7 @@ BuildRequires: libtiff-devel
 BuildRequires: libexif-devel
 BuildRequires: exiv2-devel
 BuildRequires: libcanberra-devel
-BuildRequires: libnotify-devel
+BuildRequires: libnotify-devel >= 0.5.0
 BuildRequires: glib2-devel >= 2.25.8
 
 %description
