trivial: sync spec file with fedora upstream

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -31,7 +31,7 @@ BuildRequires: intltool
 BuildRequires: libgudev1-devel
 BuildRequires: libXxf86vm-devel
 BuildRequires: libXrandr-devel
-BuildRequires: gnome-desktop-devel
+BuildRequires: gnome-desktop3-devel
 BuildRequires: lcms2-devel
 BuildRequires: cups-devel
 BuildRequires: sane-backends-devel
@@ -40,7 +40,7 @@ BuildRequires: libexif-devel
 BuildRequires: exiv2-devel
 BuildRequires: libcanberra-devel
 BuildRequires: libnotify-devel >= 0.5.0
-BuildRequires: glib2-devel >= 2.25.8
+BuildRequires: glib2-devel >= 2.25.9-2
 
 %description
 gnome-color-manager is a session framework that makes it easy to manage, install
