Add some initial framework code to talk to the HUEY colorimeter

--- a/configure.ac
+++ b/configure.ac
@@ -142,6 +142,7 @@ PKG_CHECK_MODULES(GNOMEDESKTOP, gnome-desktop-3.0 >= 2.90.0)
 PKG_CHECK_MODULES(GUDEV, gudev-1.0)
 PKG_CHECK_MODULES(LCMS, lcms2)
 PKG_CHECK_MODULES(X11, x11)
+PKG_CHECK_MODULES(USB, [libusb-1.0 >= 1.0.0])
 
 dnl Required for the properties window
 PKG_CHECK_MODULES(CONTROL_CENTER, [
