huey: add a simple hacky program that parses the USB logs

--- a/configure.ac
+++ b/configure.ac
@@ -316,6 +316,7 @@ po/Makefile.in
 rules/Makefile
 src/Makefile
 docs/Makefile
+docs/huey/Makefile
 docs/api/Makefile
 docs/api/version.xml
 libcolor-glib/Makefile
