--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,16 +17,15 @@ src/gcm-colorimeter.c
 src/gcm-device-xrandr.c
 src/gcm-dump-edid.c
 src/gcm-dump-profile.c
-src/gcm-enum.c
 src/gcm-fix-profile.c
 src/gcm-import.c
 src/gcm-inspect.c
 src/gcm-install-system-wide.c
 src/gcm-picker.c
 src/gcm-viewer.c
-src/gcm-profile.c
 src/gcm-session.c
 src/gcm-utils.c
+libcolor-glib/gcm-profile.c
 [type: gettext/glade]data/gcm-calibrate.ui
 [type: gettext/glade]data/gcm-picker.ui
 [type: gettext/glade]data/gcm-prefs.ui
